# Poor-Code

./: .gitignore  CLAUDE.md  README.md  checklist.md  plan.md  pyproject.toml  spec.md  task.md
.claude/skills/poor-spec/: SKILL.md
poorcode/: __init__.py  __main__.py  chat.py  config.py
poorcode/agent/: __init__.py  collector.py  events.py  executor.py  loop.py  stop.py
poorcode/provider/: __init__.py  anthropic.py  base.py  http.py  openai.py  registry.py
poorcode/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py  registry.py  security.py  write.py
poorcode/tui/: __init__.py  app.py  input_area.py  render.py
