[project]
name = "poorcode"
version = "0.1.0"
description = "命令行 AI 编码助手"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
poorcode = "poorcode.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
